[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackasm"
version = "0.1.0"
authors = [
  { name="Alessandro Salerno" },
]
description = " A work-in-progress small and simple build system meant for smaller C Projects."
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alessandro-Salerno/Hackasm"
"Bug Tracker" = "https://github.com/Alessandro-Salerno/Hackasm/issues"
