[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackasm"
version = "0.2.0"
authors = [
  { name="Alessandro Salerno" },
]
description = "Assembler for VM-O-MATIC"
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alessandro-Salerno/Hackasm"
"Bug Tracker" = "https://github.com/Alessandro-Salerno/Hackasm/issues"
